--- a/requirements.txt
+++ b/requirements.txt
@@ -19,12 +19,12 @@ flask-cors==5.0.1
 frozenlist==1.5.0
 fsspec==2025.3.2
 google==3.0.0
-google-ai-generativelanguage==0.6.15
+google-ai-generativelanguage
 google-api-core==2.24.2
 google-api-python-client==2.166.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
-google-generativeai==0.8.4
+google-generativeai
 googleapis-common-protos==1.69.2
 greenlet==3.1.1
 grpcio==1.71.0
@@ -33,17 +33,12 @@ h11==0.14.0
 httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
-huggingface-hub==0.30.2
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.3.23
-langchain-core==0.3.51
-langchain-google-genai==2.1.2
-langchain-text-splitters==0.3.8
 langsmith==0.3.24
 MarkupSafe==3.0.2
 mpmath==1.3.0
