--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ flask-cors==5.0.1
 frozenlist==1.5.0
 fsspec==2025.3.2
 google==3.0.0
-google-ai-generativelanguage==0.6.15
+google-ai-generativelanguage
 google-api-core==2.24.2
 google-api-python-client==2.166.0
 google-auth==2.38.0
@@ -42,7 +42,7 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.23
 langchain-core==0.3.51
-langchain-google-genai==2.1.2
+langchain-google-genai
 langchain-text-splitters==0.3.8
 langsmith==0.3.24
 MarkupSafe==3.0.2
